add yandex metrika goals

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         accurateTrackBounce:true,
                         webvisor:true
                     });
+                    window.yaCounter = w.yaCounter42758139
                 } catch(e) { }
             });
 
