--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 </head>
   <body>
     <div id="app">
-        <div class="init-preloader">
-            <div></div>
-        </div>
+    </div>
+
+    <div style="z-index: 1; position: fixed; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-size: 36px; font-weight: 300; color: #424242;">
+        <div>Loading ...</div>
     </div>
 
     <!-- built files will be auto injected -->
